--- a/scss/custom.scss
+++ b/scss/custom.scss
@@ -1,1 +1,8 @@
+@import "variables";
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "animaciones";
+
+.sliderThumb,
+.sliderMianImage {
+  cursor: pointer;
+}
